# LLM_evaluation

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  MENA_GUARDRAILS_OPENAI.md  README.md  REGIONAL_GUARDRAILS_OPENAI.md  STRUCTURE.md  SafeGuardLLM.code-workspace  System-Design.md  app.py  arabic_reviews_sample.json  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  guardrails_integration.py  guardrails_mena.py  init-db.sql  mena_complex_test_results.json  mena_complex_training.jsonl  mena_complex_training_stats.json  mena_guardrails_app.py  mena_guardrails_comprehensive_training.py  mena_guardrails_training.jsonl  mena_guardrails_training_stats.json  mena_guardrails_validation.jsonl  mena_validators_report.json  nginx.conf  package-lock.json  package.json  pyproject.toml  relabel.py  replit.md  replit_test.py  safeguard_integration_demo.py  safeguard_integration_report.json  safeguard_validators.py  (+8 more)
attached_assets/: Pasted--1-Update-the-API-endpoint-in-server-routes-ts-app-get-api-evaluation-results-async-req-res-1753258224379_1753258224380.txt  Pasted--CyberSecEval-Enhanced-Project-Todo-List-Analysis-of-Original-CyberSecEval-x-Review-main-1751120748335_1751120748335.txt  Pasted-Below-are-long-multi-paragraph-samples-that-weave-together-Arabic-English-religious-referen-1752442201772_1752442201774.txt  Pasted-Copy-paste-any-row-below-into-the-MENA-Guardrails-Testing-input-box-to-verify-blocking-redac-1752417452892_1752417452892.txt  __init___1751120683305.py  anthropic_model_1751120683306.py  (+27 more)
(+117 files in other folders)
