[tool.poetry]
name = "safeguard-llm"
version = "0.1.0"
description = ""
authors = ["you"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {version = "2.2.2+cpu", source = "pytorch_cpu"}
datasets = "2.19.1"
accelerate = "0.30.1"
peft = "0.11.1"
pyzipper = "0.3.6"
pefile = "2023.2.7"
tqdm = "^4.66"
requests = "^2.31"
gradio = "^5.36.2"
guardrails-ai = ">=0.4.0"
openai = "^1.95.1"
kagglehub = "^0.3.12"
pandas = "^2.3.1"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"