[project]
name = "safeguard-llm"
version = "0.1.0"
description = ""
authors = [{name = "you"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.2.2+cpu",
    "datasets==2.19.1",
    "accelerate==0.30.1",
    "peft==0.11.1",
    "pyzipper==0.3.6",
    "pefile==2023.2.7",
    "tqdm>=4.66",
    "requests>=2.31",
    "gradio>=5.36.2",
    "guardrails-ai>=0.4.0",
    "openai>=1.95.1",
    "kagglehub>=0.3.12",
    "pandas>=2.3.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"